--- a/web/index.html
+++ b/web/index.html
@@ -117,7 +117,7 @@
                     </button>
                 </form>
             </div>
-            <div class="row">
+            <div class="row" id="user-contents">
                 <div class="page-header">
                     <h1 id="header-user">
                     AtCoder Problems
