For #6 Add Date

--- a/web/index.html
+++ b/web/index.html
@@ -241,6 +241,9 @@
                                 <th data-field="contest_name" data-sortable="true">
                                     コンテスト
                                 </th>
+                                <th data-field="date" data-sortable="true">
+                                    出題日
+                                </th>
                                 <th data-field="status" data-sortable="true">
                                     状態
                                 </th>
